# gc10next

./: CMakeLists.txt  README.md  eeprom.h  image.h  main.c  ssd1306.c
latestFW/: gc10nx_series.uf2
